# cdm-jupyter-ai-cborg

./: LICENSE  README.md  pyproject.toml
jupyter_ai_cborg/: cborg.py
