[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab~=4.0"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_cborg"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "A Jupyter AI extension."
authors = [
    { name = "Tian Gu", email = "tgu@anl.gov" },
]
dependencies = ["jupyter_ai"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

[project.entry-points."jupyter_ai.model_providers"]
cborg = "jupyter_ai_cborg.cborg:CBorgProvider"

[tool.hatch.build.hooks.version]
path = "jupyter_ai_cborg/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
